--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ rust_decimal = "1.37.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.45.0", features = ["rt-multi-thread"]}
-tower-http = { version = "0.6.4", features = ["cors"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.4", features = ["fs", "cors", "normalize-path"] }
