--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.8.4", features = ["macros"]}
+axum-extra = "0.10.1"
+axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 grand = { git = "https://github.com/A31Nesta/grand" }
 rand = "0.9.1"
 rust_decimal = "1.37.1"
